Added MAGIC link and logo

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div style='display: inline-block'>
         brought to you by
         <a href="http://foss.rit.edu" target="_blank"><img class='foss-logo' src="images/logo.png" alt="FOSS@RIT" border=none></a>
+        <a href="http://foss.rit.edu" target="_blank"><img class='foss-logo' src="images/magic-160.png" alt="MAGIC" border=none></a>
       </div>
       <ul id='tabs'></ul>
       <table>
